syntax = "proto3";
package com.antigravity;

import "server/race_time.proto";
import "server/lap.proto";
import "server/full_update.proto";

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "RaceDataProto";

message RaceData {
  oneof data {
    RaceTime race_time = 1;
    Lap lap = 2;
    FullUpdate full_update = 3;
  }
}
